Fix gap and clear filter

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -162,7 +162,7 @@ body {
 .tabs-content {
   display: flex;
   flex-flow: row wrap;
-  gap: rem(2);
+  gap: rem(1);
   place-content: center;
 }
 
